# glex-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  spec_workspace_split.md
.github/workflows/: ci.yml  release.yml
benchmarks/scripts/: prepare_data.py
core/: Cargo.toml
core/benches/: fastpd_xgboost_augment.rs  fastpd_xgboost_bench.rs  fastpd_xgboost_eval.rs  xgboost_bench_utils.rs
core/src/: lib.rs
core/src/fastpd/: augment.rs  augment_eval.rs  augmented_tree.rs  cache.rs  error.rs  evaluate.rs  mod.rs  parallel.rs  tree.rs  types.rs
core/src/xgboost/: json_schema.rs  mod.rs  parser.rs
data/: generate_data_and_train.py
data/datasets/: california_housing.csv  synthetic_n1000_p5.csv  synthetic_n2000_p7.csv  synthetic_n200_p2.csv  synthetic_n5000_p10.csv  synthetic_n500_p3.csv
data/models/: california_housing_xgb.json  synthetic_n1000_p5_xgb.json  synthetic_n2000_p7_xgb.json  synthetic_n200_p2_xgb.json  synthetic_n5000_p10_xgb.json  synthetic_n500_p3_xgb.json
examples/: california_1d_components.py  california_2d_interactions.py
python/: Cargo.toml
python/glex_rust/: __init__.py  __init__.pyi  glex_rust.pyi  visualization.py
python/src/: lib.rs
python/src/xgboost/: mod.rs  python_bridge.rs  tree_model.rs  types.rs
src/: lib.rs
src/fastpd/: augment.rs  augment_eval.rs  augmented_tree.rs  cache.rs  error.rs  evaluate.rs  mod.rs  tree.rs  types.rs
src/xgboost/: json_schema.rs  mod.rs  parser.rs  python_bridge.rs  tree_model.rs  types.rs
tests/: test_basic.py  test_california_housing_pd.py  test_fastpd.py  test_feature_names.py  test_prediction_equal.py  test_visualization.py
