[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "glex-rust"
version = "0.2.1"
requires-python = ">=3.12"
authors = [
    {name = "Jinyang Liu", email = "jl@math.ku.dk"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "numpy",
    "xgboost",
    "scikit-learn",
]

[tool.maturin]
manifest-path = "python/Cargo.toml"
bindings = "pyo3"
module-name = "glex_rust.glex_rust"
python-source = "python"
