[package]
name = "glex-core"
version = "0.2.0"
edition = "2021"
authors = ["Jinyang Liu <jl@math.ku.dk>"]

[dependencies]
ndarray-linalg = { version = "0.14", features = ["openblas-system"] }
ndarray = "0.15"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
csv = "1.3"

[[bench]]
name = "fastpd_xgboost_augment"
harness = false

[[bench]]
name = "fastpd_xgboost_eval"
harness = false
