[package]
name = "glex-rust"
version = "0.2.1"
edition = "2021"
authors = ["Jinyang Liu <jl@math.ku.dk>"]

[lib]
name = "glex_rust"
crate-type = ["cdylib"]

[dependencies]
glex-core = { path = "../core" }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
numpy = "0.27"
ndarray = "0.15"
serde_json = "1.0"

